<resources>
    <!-- String eksisting -->
    <string name="app_name">Metric Converter</string>
    <string name="name">by: Adriano Posumah</string>
    <string name="logo">Logo</string>
    <string name="pilih_metrik">Pilih Metrik: </string>
    <string name="background">Background</string>
    <string name="dari">Dari:</string>
    <string name="ke">Ke:</string>
    <string name="masukkan_nilai">Masukkan Nilai:</string>
    <string name="hasil">Hasil :</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="del">Del</string>

    <!-- Pilihan Metrik -->
    <string-array name="metric_options">
        <item>Panjang</item>
        <item>Massa</item>
    </string-array>

    <!-- Unit Panjang -->
    <string-array name="length_unit_options">
        <item>KM</item>
        <item>M</item>
        <item>CM</item>
        <item>MM</item>
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
    </string-array>

    <!-- Unit Massa -->
    <string-array name="mass_unit_options">
        <item>KG</item>
        <item>G</item>
        <item>MG</item>
        <item>Pound</item>
        <item>Ounce</item>
    </string-array>
</resources>
